<resources>
    <string name="app_name">代充</string>
    <string name="paizhao">拍照</string>
    <string name="xiangce">相册</string>
    <string name="tiaoguo">跳过</string>
    <string name="app_prompt">提示</string>
    <string name="app_submit">提交</string>
    <string name="app_submit_true">提交成功</string>
    <string name="app_confirm">确认</string>
    <string name="app_confirm_true">确认更新</string>
    <string name="app_cancel">取消</string>
    <string name="app_nomore">没有更多了</string>
    <string name="app_re_register">账户登录过期，请重新登录</string>
    <string name="app_out">再按一次退出程序</string>
    <string name="app_imgerr">图片压缩失败</string>
    <string name="app_change_true">修改成功</string>
    <string name="app_setup_true">设置成功</string>
    <string name="app_card">请确认已经插入SD卡</string>
    <string name="app_iscancel">确认取消吗？</string>
    <string name="app_jsonerr">数据解析错误</string>
    <string name="app_file">图片已经保存到手机根目录</string>
    <string name="app_yes">是</string>
    <string name="app_no">否</string>
    <string name="app_permissions">当前应用缺少必要权限。\n请点击“设置”-“权限”-打开所需权限。\n最后点击两次后退按钮，即可返回</string>
    <string name="app_quit">退出</string>
    <string name="app_setting">设置</string>
    <string name="app_sendcode">获取验证码</string>
    <string name="app_sendcode_hint">验证码发送成功</string>
    <string name="app_sendcode_hint1">正在获取验证码，请稍后...</string>
    <string name="app_reacquirecode">重新获取</string>
    <string name="app_codethen">s后获取</string>
    <string name="app_tian">天</string>
    <string name="app_qiang">抢</string>
    <string name="app_ren">人</string>
    <string name="app_mei">枚</string>
    <string name="app_yuan">元</string>
    <string name="app_ge">个</string>
    <string name="app_bei">倍</string>
    <string name="app_ji">级</string>
    <string name="app_chang">场</string>
    <string name="app_shi">h</string>
    <string name="app_fen">m</string>
    <string name="app_miao">s</string>
    <string name="app_loading">正在加载...</string>
    <string name="app_loading1">正在提交数据...</string>
    <string name="app_loading2">正在获取数据...</string>
    <string name="app_loading3">正在设置分享数据...</string>
    <string name="app_nodata">暂无数据</string>
    <string name="app_reload">没有数据</string>
    <string name="app_reload1">加载出错</string>
    <string name="app_abheader_refresh">下拉刷新</string>
    <string name="app_abheader_refreshtime">刷新时间：</string>
    <string name="app_abheader_refreshtlastime">上次刷新时间：</string>
    <string name="app_abheader_refreshletgo">松开刷新</string>
    <string name="app_abheader_refreshing">正在刷新...</string>
    <string name="app_abheader_refreshnowtime">本次刷新时间：</string>
    <string name="app_abfooter_loadmore">载入更多</string>
    <string name="app_abfooter_loading">正在加载...</string>
    <string name="app_abfooter_loadno">没有了！</string>
    <string name="app_abfooter_loadnodata">没有数据</string>
    <string name="app_err">网络开小差了，刷新试试</string>
    <string name="app_err1">数据出错了！</string>
    <string name="app_refresh">刷新</string>
    <string name="app_refresh1">分钟前</string>
    <string name="app_refresh2">小时前</string>
    <string name="app_refresh3">天前</string>
    <string name="app_refresh4">刚刚</string>
    <string name="app_refresh5">松开载入更多</string>
    <string name="app_refresh6">查看更多</string>
    <string name="app_type_quanbu">全部</string>
    <string name="app_type_zhuangtai">状态</string>
    <string name="app_type_pingtai">平台</string>
    <string name="app_type_ETH">ETH</string>
    <string name="app_type_CHO">CHO</string>
    <string name="app_type_GRE">GRE</string>
    <string name="app_type_QDS">QDS</string>
    <string name="app_type_paixu">排序</string>
    <string name="app_type_leixing">类型</string>
    <string name="app_type_daishenhe">待审核</string>
    <string name="app_type_yitongguo">已通过</string>
    <string name="app_type_weitongguo">未通过</string>
    <string name="app_type_jiangxu">降序</string>
    <string name="app_type_shengxu">升序</string>
    <string name="app_type_jinxingzhong">进行中</string>
    <string name="app_type_yiwancheng">已完成</string>
    <string name="app_type_ansuanli">按算力</string>
    <string name="app_type_anshijian">按时间</string>
    <string name="app_type_daijihuo">待激活</string>
    <string name="app_type_yiijihuo">已激活</string>
    <string name="app_type_yijiangli">已奖励</string>
    <string name="app_type_zhuanchu">转出</string>
    <string name="app_type_zhuanru">转入</string>
    <string name="fragment1">兑现</string>
    <string name="fragment2">代充</string>
    <string name="fragment3">个人中心</string>
    <string name="fragment4">排行</string>
    <string name="fragment5">我的</string>
    <string name="update_hint">版本更新</string>
    <string name="update_hint1">SD卡不可用，请插入SD卡</string>
    <string name="update_hint2">已是最新版本</string>
    <string name="update_hint3">正在下载</string>
    <string name="update_hint4">请稍候...</string>
    <string name="update_hint5">正在安装程序</string>
    <string name="update_hint6">安装失败：</string>
    <string name="update_hint7">温馨提示</string>
    <string name="update_hint8">必须授权才能安装APK，请设置允许安装</string>
    <string name="update_hint9">设置</string>
    <string name="update_hint10">稍后再说</string>
    <string name="update_hint11">立即更新</string>
    <string name="update_hint12">发现新版本，升级后体验更顺畅！\n不升级当前版本不可使用</string>
    <string name="desc">降序</string>
    <string name="asc">升序</string>
    <string name="login_h1">请输入手机号码</string>
    <string name="login_h2">请输入密码</string>
    <string name="login_h3"><u>注册账号</u></string>
    <string name="login_h4">忘记密码?</string>
    <string name="login_h5">登录</string>
    <string name="login_h6">第三方登录</string>
    <string name="login_h7">正在登录...</string>
    <string name="login_h8">确认授权</string>
    <string name="login_h9">您的账号已被冻结，请及时与客服联系</string>
    <string name="login_h10">正在授权登录...</string>
    <string name="login_h11">授权失败</string>
    <string name="login_h12">请输入验证码</string>
    <string name="login_h13">该账户尚未激活，请完成人脸识别后进行操作</string>
    <string name="login_h14">还没有账号？</string>
    <string name="login_h15">登录授权</string>
    <string name="login_h16">国家/地区</string>
    <string name="registered_h1">请输入手机号码</string>
    <string name="registered_h2">请输入验证码</string>
    <string name="registered_h3">请设置密码</string>
    <string name="registered_h4">请确认密码</string>
    <string name="registered_h5">请输入邀请码</string>
    <string name="registered_h6">已阅读并同意</string>
    <string name="registered_h7">《用户使用协议》</string>
    <string name="registered_h8">确认</string>
    <string name="registered_h9">注册</string>
    <string name="registered_h10">注册成功</string>
    <string name="registered_h11">请设置昵称</string>
    <string name="registered_h12">请输入相同的密码</string>
    <string name="registered_h13">该昵称可用</string>
    <string name="registered_h14">正在注册...</string>
    <string name="forgetpassword_h1">请输入手机号码</string>
    <string name="forgetpassword_h2">请输入验证码</string>
    <string name="forgetpassword_h3">请输入新密码</string>
    <string name="forgetpassword_h4">请再次输入新密码</string>
    <string name="forgetpassword_h5">确认</string>
    <string name="forgetpassword_h6">忘记密码</string>
    <string name="forgetpassword_h7">请输入相同的密码</string>
    <string name="forgetpassword_h8">重置密码成功</string>
    <string name="forgetpassword_h9">正在重置密码，请稍后...</string>
    <string name="fragment1_h1">邀请码</string>
    <string name="fragment2_h1">币种</string>
    <string name="fragment3_h1">投注额</string>
    <string name="myprofile_h1">个人信息</string>
    <string name="myprofile_h2">手机号</string>
    <string name="myprofile_h3">昵称</string>
    <string name="myprofile_h4">邀请码</string>
    <string name="myprofile_h5">邮箱</string>
    <string name="myprofile_h6">账号密保</string>
    <string name="myprofile_h7">交易密码</string>
    <string name="myprofile_h8">登录密码</string>
    <string name="myprofile_h9">退出登录</string>
    <string name="myprofile_h10">头像</string>
    <string name="myprofile_h11">确认退出该账号吗？</string>
    <string name="myprofile_h12">收款设置</string>
    <string name="myprofile_h13">修改成功</string>
    <string name="changepassword_h1">修改登录密码</string>
    <string name="changepassword_h2">旧密码</string>
    <string name="changepassword_h3">新密码</string>
    <string name="changepassword_h4">确认新密码</string>
    <string name="changepassword_h5">请输入旧密码</string>
    <string name="changepassword_h6">请输入新密码</string>
    <string name="changepassword_h7">请再次输入新密码</string>
    <string name="changepassword_h8">两次输入的密码不一致</string>
    <string name="changepassword_h9">修改密码成功，请重新登录</string>
    <string name="settransactionpassword_h1">修改交易密码</string>
    <string name="settransactionpassword_h2">手机号</string>
    <string name="settransactionpassword_h3">请输入手机号</string>
    <string name="settransactionpassword_h4">验证码</string>
    <string name="settransactionpassword_h5">请输入验证码</string>
    <string name="settransactionpassword_h6">新密码</string>
    <string name="settransactionpassword_h7">请输入新密码</string>
    <string name="settransactionpassword_h8">确认新密码</string>
    <string name="settransactionpassword_h9">请再次输入新密码</string>
    <string name="settransactionpassword_h10">两次输入的密码不一致</string>
    <string name="settransactionpassword_h11">交易密码修改成功</string>
    <string name="accountdetail_h1">收入记录</string>
    <string name="accountdetail_h2">支出记录</string>
    <string name="accountdetail_h3">钱包详情</string>
    <string name="accountdetail_h4">余币</string>
    <string name="accountdetail_h5">可用</string>
    <string name="accountdetail_h6">已抵押</string>
    <string name="accountdetail_h7">充币</string>
    <string name="accountdetail_h8">兑现</string>
    <string name="accountdetail_h9">抵押</string>
    <string name="accountdetail_h10">充币个数：</string>
    <string name="accountdetail_h11">订单号：</string>
    <string name="accountdetail_h12">时间：</string>
    <string name="accountdetail_h13">我的钱包</string>
    <string name="accountdetail_h14">冻结币数：</string>
    <string name="accountdetail_h15">累计收益：</string>
    <string name="accountdetail_h16">累计佣金：</string>
    <string name="accountdetail_h17">可用币数不能低于最低抵押数，是否前去充币？</string>
    <string name="recharge_h1">代充记录</string>
    <string name="recharge_h2">可用余币：</string>
    <string name="recharge_h3">兑换算力</string>
    <string name="recharge_h4">输入算力</string>
    <string name="recharge_h5">算力等级</string>
    <string name="recharge_h6">算力产值</string>
    <string name="recharge_h7">算力倍数</string>
    <string name="recharge_h8">确定</string>
    <string name="recharge_h9">请输入算力</string>
    <string name="recharge_h10">代充详情</string>
    <string name="recharge_h11">充币个数</string>
    <string name="recharge_h12">充币成功</string>
    <string name="recharge_h13">充币处理中</string>
    <string name="recharge_h14">充币地址</string>
    <string name="recharge_h15">ETH价格</string>
    <string name="recharge_h16">实际到账</string>
    <string name="recharge_h17">充币时间</string>
    <string name="recharge_h18">流水号</string>
    <string name="recharge_h19">状态</string>
    <string name="recharge_h20">充币个数：</string>
    <string name="recharge_h21">流水号：</string>
    <string name="recharge_h22">时间：</string>
    <string name="recharge_h23">个CHO</string>
    <string name="recharge_h24">CHO价格</string>
    <string name="recharge_h25">算力兑换成功</string>
    <string name="recharge_h26">充币失败</string>
    <string name="recharge_h27">充币失败原因：</string>
    <string name="recharge_h28">取消充币</string>
    <string name="recharge_h29">确定取消充币？</string>
    <string name="recharge_h30">取消成功</string>
    <string name="takecash_h1">兑现</string>
    <string name="takecash_h2"><u>ETH地址</u></string>
    <string name="takecash_h3">可用余币：</string>
    <string name="takecash_h4">ETH价格：</string>
    <string name="takecash_h5">美元</string>
    <string name="takecash_h6">手续费：</string>
    <string name="takecash_h7">兑现数量</string>
    <string name="takecash_h8">输入兑现个数</string>
    <string name="takecash_h9">交易密码</string>
    <string name="takecash_h10">请输入交易密码</string>
    <string name="takecash_h11">实际到账</string>
    <string name="takecash_h12">确定</string>
    <string name="takecash_h13">兑现提交成功</string>
    <string name="takecash_h14">ETH兑现</string>
</resources>