<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background">

    <LinearLayout
        android:id="@+id/headview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/ic_return"
            android:drawablePadding="14dp"
            android:onClick="onClick"
            android:padding="15dp"
            android:text="@string/forgetpassword_h6"
            android:textColor="@color/black1"
            android:textSize="20sp"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginLeft="14dp"
            android:layout_marginRight="14dp"
            android:background="@color/xian" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/editText1"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/yuanjiao_5_baiseyinying"
                    android:gravity="center_vertical"
                    android:hint="@string/forgetpassword_h1"
                    android:inputType="phone"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/black3"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/yuanjiao_5_baiseyinying"
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:padding="14dp">

                    <EditText
                        android:id="@+id/editText2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@color/transparent"
                        android:gravity="center_vertical"
                        android:hint="@string/forgetpassword_h2"
                        android:inputType="number"
                        android:singleLine="true"
                        android:textColor="@color/black1"
                        android:textColorHint="@color/black3"
                        android:textSize="15sp" />

                    <TextView
                        android:id="@+id/textView1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_yzm"
                        android:onClick="onClick"
                        android:paddingBottom="6dp"
                        android:paddingLeft="14dp"
                        android:paddingRight="14dp"
                        android:paddingTop="6dp"
                        android:singleLine="true"
                        android:text="@string/app_sendcode"
                        android:textColor="@color/white"
                        android:textSize="12sp" />

                </LinearLayout>

                <EditText
                    android:id="@+id/editText3"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="35dp"
                    android:background="@drawable/yuanjiao_5_baiseyinying"
                    android:gravity="center_vertical"
                    android:hint="@string/forgetpassword_h3"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/black3"
                    android:textSize="15sp" />


                <EditText
                    android:id="@+id/editText4"
                    android:layout_width="match_parent"
                    android:layout_height="60dp"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginTop="14dp"
                    android:background="@drawable/yuanjiao_5_baiseyinying"
                    android:gravity="center_vertical"
                    android:hint="@string/forgetpassword_h4"
                    android:inputType="textPassword"
                    android:padding="14dp"
                    android:singleLine="true"
                    android:textColor="@color/black1"
                    android:textColorHint="@color/black3"
                    android:textSize="14sp" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />


                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="30dp"
                    android:background="@drawable/btn_img_login"
                    android:gravity="center"
                    android:onClick="onClick"
                    android:text="@string/forgetpassword_h5"
                    android:textColor="@color/white"
                    android:textSize="15sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>